Fix alignment profit

--- a/src/components/Profit/profit.css
+++ b/src/components/Profit/profit.css
@@ -23,14 +23,22 @@ justify-content: space-between;
 width:100%;
 align-items: center;
 }
-.netprofit-container{
+.totalprofit-container{
+    display:flex;
+    flex-direction: column;
     background-color: #1f2029;
-    display: flex;
     justify-content: space-between;
     align-items: center;
     gap:0.8rem;
     border-radius: 10px;
     padding:6%;
+    width:100%;
+}
+.netprofit-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap:0.8rem;
     width:100%;
 }
 .netprofit-wrapper{
